--- a/scb-ui-zk/src/main/webapp/pages/common/template/page-headline.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/page-headline.zul
@@ -1,13 +1,12 @@
 <zk>
-	<div sclass="page-header" apply="com.jzaoralek.scb.ui.common.template.PageHeadlineComposer" hflex="1" >
-	
+	<hbox sclass="page-header" apply="com.jzaoralek.scb.ui.common.template.PageHeadlineComposer" pack="center" style="margin-top: 20px;">
 		<custom-attributes menuId="${arg.menuSelected}"/>
-		
-		  <label value="${arg.label}"/>
+		  <span sclass="${arg.sclass}"/>
+		  <label value="${arg.label}" />
 		  <a label="${arg.description}" 
 		  	if="${arg.description != null}"
 		  	iconSclass="z-icon-angle-double-right"
-		  	sclass="subtitle"/>
-	</div>
+		  	sclass="subtitle" />
+	</hbox>
 
 </zk>
