--- a/scb-data-service-api/.settings/org.eclipse.wst.common.component
+++ b/scb-data-service-api/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="scb-ui-zk">
+    <wb-module deploy-name="scb-data-service-api">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
@@ -7,7 +7,7 @@
         <dependent-module archiveName="scb-data-service-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/scb-data-service/scb-data-service">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="context-root" value="scb-ui-zk"/>
-        <property name="java-output-path" value="/scb-ui-zk/target/classes"/>
+        <property name="context-root" value="scb-data-service-api"/>
+        <property name="java-output-path" value="/scb-data-service-api/target/classes"/>
     </wb-module>
 </project-modules>
