--- a/scb-ui-zk/src/main/webapp/pages/public/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/prihlaska-do-klubu.zul
@@ -1,9 +1,15 @@
 <?page title="${c:l('txt.ui.organization.name')} - ${c:l('txt.ui.menu.application')}"?>
 <?init class="org.zkoss.zk.ui.util.Composition" arg0="/pages/common/template/template.zul"?>
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
+<?component name="validMsg" macroURI="/pages/common/component/validMsg.zul"?>
 
 <zk>
 	<div self="@{define(mainContent)}" hflex="1" >
+		<style>
+			<!-- cut/hide the vertical borders in the grid rows -->
+			tr.z-row td.z-row-inner { border-right: 0px #CCC;  }			
+		</style>
+		
 		<div sclass="breadcrumb" visible="false">
 			<span sclass="home-icon z-icon-home"/>
 	    	<a label="${c:l('txt.ui.menu.dashboard')}" href="/"/>
@@ -25,8 +31,263 @@
 		
 			<vbox hflex="1" />
 			
-			<vbox hflex="20" pack="center">
-				content
+			<vbox hflex="20" pack="center" sclass="vbox-content"
+				 apply="org.zkoss.bind.BindComposer" 
+				 viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationVM')"
+				 validationMessages="@id('vmsgs')"
+        		 form="@id('fx') @load(vm.application) @save(vm.application, before='submit')" >
+				        
+				<!-- Ucastnik -->
+				<grid hflex="1">
+		            <auxhead>
+		            	<auxheader colspan="2">
+		            		<label value="${c:l('txt.ui.common.participant')}"/>
+		            		(<label value="${c:l('txt.ui.common.child')}"/>)
+		            	</auxheader>
+		            </auxhead>
+					<columns>
+		                <column width="170px" align="right" />
+		                <column />
+		            </columns>
+					<rows >
+						<row style="padding: 10px; border: none;">
+							<label value="${c:l('txt.ui.common.firstname')}:"/>
+							<cell >
+								<hbox hflex="1" align="center">
+									<textbox id="particFirstname" 
+										value="@bind(fx.courseParticipant.contact.firstname) @validator(vm.notNullValidator)"
+										maxlength="@load(vm.getFirstnameMaxlength())"
+										tabindex="1"
+										hflex="3" />
+									<vbox hflex="2" style="margin-left: 10px;">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particFirstname])" >
+											<label value="@bind(vmsgs[particFirstname])" />
+										</span>
+									</vbox>
+								</hbox>
+							</cell>
+						</row>
+						<row style="padding: 10px; border: none;">
+							<label value="${c:l('txt.ui.common.surname')}:"/>
+							<cell>
+								<hbox hflex="1">
+									<textbox id="particSurname" 
+										value="@bind(fx.courseParticipant.contact.surname) @validator(vm.notNullValidator)"
+										maxlength="@load(vm.getSurnameMaxlength())"
+										tabindex="2"
+										hflex="3" />
+									<vbox hflex="2" style="margin-left: 10px;">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particSurname])" >
+											<label value="@bind(vmsgs[particSurname])" />
+										</span>
+									</vbox>
+								</hbox>
+							</cell>
+						</row>
+						<row style="padding: 10px; border: none;">
+							<label value="${c:l('txt.ui.common.birthDate')}:"/>
+							<cell>
+								<hbox hflex="1">
+									<datebox id="particBirthdate" 
+										value="@bind(fx.courseParticipant.birthdate) @validator(vm.notNullObjectValidator)"
+	                            		format="@load(vm.dateFormat)"
+	                            		maxlength="@load(vm.getDateMaxlength())"
+	                            		tabindex="3" />
+	                            	<vbox hflex="2" style="margin-left: 10px;">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
+											<label value="@bind(vmsgs[particBirthdate])" />
+										</span>
+									</vbox>
+								</hbox>
+							</cell>
+						</row>
+						<row style="padding: 10px; border: none;">
+							<label value="${c:l('txt.ui.common.birthNumber')}:"/>
+							<cell>
+								<hbox hflex="1">
+									<textbox id="particBirthNumber"
+										value="@bind(fx.courseParticipant.personalNo) @validator(vm.notNullObjectValidator)"
+	                            		maxlength="@load(vm.getBirthNumberMaxlength())"
+	                            		tabindex="4"
+	                            		hflex="3" />
+	                            	<vbox hflex="2" style="margin-left: 10px;">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
+											<label value="@bind(vmsgs[particBirthNumber])" />
+										</span>
+									</vbox>
+								</hbox>
+							</cell>
+						</row>
+						<row style="padding: 10px; border: none;">
+							<label value="${c:l('txt.ui.common.healthInsurance')}:"/>
+							<cell>
+								<hbox hflex="1">
+									<textbox id="particHealthInsurance"
+										value="@bind(fx.courseParticipant.healthInsurance) @validator(vm.notNullValidator)"
+										maxlength="@load(vm.getHealthInsuranceMaxlength())"
+										tabindex="5"
+										hflex="3" />
+									<vbox hflex="2" style="margin-left: 10px;">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particHealthInsurance])" >
+											<label value="@bind(vmsgs[particHealthInsurance])" />
+										</span>
+									</vbox>
+								</hbox>
+							</cell>
+						</row>
+					</rows>
+				</grid>
+				
+				<!-- Zakonny zastupce -->
+				<grid hflex="1" style="margin-top: 20px;margin-bottom: 20px;" >
+		            <auxhead>
+		            	<auxheader colspan="2">
+		            		<label value="${c:l('txt.ui.common.representative')}"/>
+		            	</auxheader>
+		            </auxhead>
+					<columns>
+		                <column width="170px" align="right" />
+		                <column />
+		            </columns>
+					<rows>
+						<row style="padding: 10px; border: none;">
+							<label value="${c:l('txt.ui.common.firstname')}:"/>
+							<cell>
+								<hbox hflex="1">
+									<textbox id="representativeFirstname"
+										value="@bind(fx.courseParticRepresentative.contact.firstname) @validator(vm.notNullValidator)" 
+										maxlength="@load(vm.getFirstnameMaxlength())"
+										tabindex="6"
+										hflex="3" />
+									<vbox hflex="2" style="margin-left: 10px;">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeFirstname])" >
+											<label value="@bind(vmsgs[representativeFirstname])" />
+										</span>
+									</vbox>
+								</hbox>
+							</cell>
+						</row>
+						<row style="padding: 10px; border: none;">
+							<label value="${c:l('txt.ui.common.surname')}:"/>
+							<cell>
+								<hbox hflex="1">
+									<textbox id="representativeSurname"
+										value="@bind(fx.courseParticRepresentative.contact.surname) @validator(vm.notNullValidator)"
+										maxlength="@load(vm.getSurnameMaxlength())"
+										tabindex="7"
+										hflex="3" />
+									<vbox hflex="2" style="margin-left: 10px;">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeSurname])" >
+											<label value="@bind(vmsgs[representativeSurname])" />
+										</span>
+									</vbox>
+								</hbox>
+							</cell>
+						</row>
+						<row style="padding: 10px; border: none;">
+							<label value="${c:l('txt.ui.common.phone')} 1:"/>
+							<cell>
+								<hbox hflex="1">
+									<textbox id="representativePhone1"
+										value="@bind(fx.courseParticRepresentative.contact.phone1) @validator(vm.notNullValidator)"
+										maxlength="@load(vm.getPhoneMaxlength())"
+										tabindex="8"
+										hflex="3" />
+									<vbox hflex="2" style="margin-left: 10px;">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativePhone1])" >
+											<label value="@bind(vmsgs[representativePhone1])" />
+										</span>
+									</vbox>
+								</hbox>
+							</cell>
+						</row>
+						<row style="padding: 10px; border: none;">
+							<label value="${c:l('txt.ui.common.phone')} 2:"/>
+							<cell>
+								<textbox id="representativePhone2" 
+									value="@bind(fx.courseParticRepresentative.contact.phone2)"
+									maxlength="@load(vm.getPhoneMaxlength())"
+									tabindex="9"
+									hflex="3" />
+								<vbox hflex="2"/>
+							</cell>
+						</row>
+						<row style="padding: 10px; border: none;">
+							<label value="${c:l('txt.ui.common.email')} 1:"/>
+							<cell>
+								<hbox hflex="1">
+									<textbox id="representativeEmail1"
+										value="@bind(fx.courseParticRepresentative.contact.email1) @validator(vm.emailValidator, notNull=true)"
+										maxlength="@load(vm.getEmailMaxlength())"
+										tabindex="10"
+										hflex="3" />
+									<vbox hflex="2" style="margin-left: 10px;">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail1])" >
+											<label value="@bind(vmsgs[representativeEmail1])" />
+										</span>
+									</vbox>
+								</hbox>
+							</cell>
+						</row>
+						<row style="padding: 10px; border: none;">
+							<label value="${c:l('txt.ui.common.email')} 2:"/>
+							<cell>
+								<hbox hflex="1">
+									<textbox id="representativeEmail2" 
+										value="@bind(fx.courseParticRepresentative.contact.email2) @validator(vm.emailValidator)"
+										maxlength="@load(vm.getEmailMaxlength())"
+										tabindex="11"
+										hflex="3" />
+									<vbox hflex="2" style="margin-left: 10px;">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail2])" >
+											<label value="@bind(vmsgs[representativeEmail2])" />
+										</span>
+									</vbox>
+								</hbox>
+							</cell>
+						</row>
+					</rows>
+				</grid>
+				
+				<hbox>
+					<checkbox checked="@bind(vm.healthInfoAgreement)" />
+					<label value="${c:l('txt.ui.application.healthAgreement')}" />
+				</hbox>
+				
+				<hbox style="margin-bottom: 20px; margin-top: 20px" 
+					hflex="1">
+					<vbox width="180px">
+						<label value="${c:l('txt.ui.application.healthInfo')}" />
+					</vbox>
+					<vbox hflex="3">
+						<textbox rows="3" hflex="1" />
+					</vbox>
+					<vbox hflex="2">
+					</vbox>
+				</hbox>
+				
+				<hbox>
+					<checkbox checked="@bind(vm.personalInfoProcessAgreement)" />
+					<hbox>
+						<label value="${c:l('txt.ui.application.personaldataProcessAgreement')}" />
+						<a href="${c:l('txt.ui.url.aquacentrumbohumin')}">${c:l('txt.ui.aquacentrumbohumin')}</a>.
+					</hbox>
+				</hbox>
+				
+				<hbox style="margin-bottom: 20px; margin-top: 20px">
+					<vbox width="180px"/>
+					<vbox>
+						TODO: captcha
+					</vbox>
+				</hbox>
+				
+				<hbox style="margin-bottom: 20px;">
+					<vbox width="180px"/>
+					<vbox>
+						<button label="Odeslat" onClick="@command('submit')" iconSclass="z-icon-check" />
+					</vbox>
+				</hbox>
+				
 			</vbox>
 			
 			<vbox hflex="1" />
