--- a/scb-ui-zk/src/main/webapp/pages/public/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/prihlaska-do-klubu.zul
@@ -27,16 +27,29 @@
 			<vbox hflex="1" />
 		</hlayout>
 		
-		<hlayout spacing="0">
+		<hlayout spacing="0" apply="org.zkoss.bind.BindComposer" 
+			 viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationVM')"
+			 validationMessages="@id('vmsgs')"
+       		 form="@id('fx') @load(vm.application) @save(vm.application, before='submit')">
 		
 			<vbox hflex="1" />
 			
-			<vbox hflex="20" pack="center" sclass="vbox-content"
-				 apply="org.zkoss.bind.BindComposer" 
-				 viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationVM')"
-				 validationMessages="@id('vmsgs')"
-        		 form="@id('fx') @load(vm.application) @save(vm.application, before='submit')" >
-				        
+			<!-- Potvrzujici info -->
+			<vbox hflex="20" pack="center" sclass="vbox-content" visible="@load(!vm.editMode)">
+				<window closable="false" border="normal" sclass="alert alert-success">
+					<caption iconSclass="z-icon-check">
+						<label value="@load(vm.confirmText)"/>
+					</caption>
+				</window>
+			</vbox>
+			
+			<!-- Formular -->
+			<vbox hflex="20" pack="center" sclass="vbox-content" visible="@load(vm.editMode)">	    
+				
+				<vbox hflex="1" align="end" style="margin: 0px;" visible="false">
+					Údaje označené hvězdičkou jsou povinné.
+				</vbox>
+				
 				<!-- Ucastnik -->
 				<grid hflex="1">
 		            <auxhead>
@@ -51,12 +64,14 @@
 		            </columns>
 					<rows >
 						<row style="padding: 10px; border: none;">
-							<label value="${c:l('txt.ui.common.firstname')}:"/>
+							<label value="${c:l('txt.ui.common.firstname')}"/>
 							<cell >
 								<hbox hflex="1" align="center">
 									<textbox id="particFirstname" 
 										value="@bind(fx.courseParticipant.contact.firstname) @validator(vm.notNullValidator)"
 										maxlength="@load(vm.getFirstnameMaxlength())"
+										placeholder="*"
+										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 										tabindex="1"
 										hflex="3" />
 									<vbox hflex="2" style="margin-left: 10px;">
@@ -68,12 +83,14 @@
 							</cell>
 						</row>
 						<row style="padding: 10px; border: none;">
-							<label value="${c:l('txt.ui.common.surname')}:"/>
+							<label value="${c:l('txt.ui.common.surname')}"/>
 							<cell>
 								<hbox hflex="1">
 									<textbox id="particSurname" 
 										value="@bind(fx.courseParticipant.contact.surname) @validator(vm.notNullValidator)"
 										maxlength="@load(vm.getSurnameMaxlength())"
+										placeholder="*"
+										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 										tabindex="2"
 										hflex="3" />
 									<vbox hflex="2" style="margin-left: 10px;">
@@ -85,13 +102,15 @@
 							</cell>
 						</row>
 						<row style="padding: 10px; border: none;">
-							<label value="${c:l('txt.ui.common.birthDate')}:"/>
+							<label value="${c:l('txt.ui.common.birthDate')}"/>
 							<cell>
 								<hbox hflex="1">
 									<datebox id="particBirthdate" 
 										value="@bind(fx.courseParticipant.birthdate) @validator(vm.notNullObjectValidator)"
-	                            		format="@load(vm.dateFormat)"
+	                            		format="@load(vm.dateFormat)" 
 	                            		maxlength="@load(vm.getDateMaxlength())"
+	                            		placeholder="*"
+	                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 	                            		tabindex="3" />
 	                            	<vbox hflex="2" style="margin-left: 10px;">
 										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
@@ -102,12 +121,14 @@
 							</cell>
 						</row>
 						<row style="padding: 10px; border: none;">
-							<label value="${c:l('txt.ui.common.birthNumber')}:"/>
+							<label value="${c:l('txt.ui.common.birthNumber')}"/>
 							<cell>
 								<hbox hflex="1">
 									<textbox id="particBirthNumber"
-										value="@bind(fx.courseParticipant.personalNo) @validator(vm.notNullObjectValidator)"
+										value="@bind(fx.courseParticipant.personalNo) @validator(vm.birthNumberValidator, notNull=true)"
 	                            		maxlength="@load(vm.getBirthNumberMaxlength())"
+	                            		placeholder="*"
+	                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 	                            		tabindex="4"
 	                            		hflex="3" />
 	                            	<vbox hflex="2" style="margin-left: 10px;">
@@ -119,12 +140,14 @@
 							</cell>
 						</row>
 						<row style="padding: 10px; border: none;">
-							<label value="${c:l('txt.ui.common.healthInsurance')}:"/>
+							<label value="${c:l('txt.ui.common.healthInsurance')}"/>
 							<cell>
 								<hbox hflex="1">
 									<textbox id="particHealthInsurance"
 										value="@bind(fx.courseParticipant.healthInsurance) @validator(vm.notNullValidator)"
 										maxlength="@load(vm.getHealthInsuranceMaxlength())"
+										placeholder="*"
+										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 										tabindex="5"
 										hflex="3" />
 									<vbox hflex="2" style="margin-left: 10px;">
@@ -151,12 +174,14 @@
 		            </columns>
 					<rows>
 						<row style="padding: 10px; border: none;">
-							<label value="${c:l('txt.ui.common.firstname')}:"/>
+							<label value="${c:l('txt.ui.common.firstname')}"/>
 							<cell>
 								<hbox hflex="1">
 									<textbox id="representativeFirstname"
 										value="@bind(fx.courseParticRepresentative.contact.firstname) @validator(vm.notNullValidator)" 
 										maxlength="@load(vm.getFirstnameMaxlength())"
+										placeholder="*"
+										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 										tabindex="6"
 										hflex="3" />
 									<vbox hflex="2" style="margin-left: 10px;">
@@ -168,12 +193,14 @@
 							</cell>
 						</row>
 						<row style="padding: 10px; border: none;">
-							<label value="${c:l('txt.ui.common.surname')}:"/>
+							<label value="${c:l('txt.ui.common.surname')}"/>
 							<cell>
 								<hbox hflex="1">
 									<textbox id="representativeSurname"
 										value="@bind(fx.courseParticRepresentative.contact.surname) @validator(vm.notNullValidator)"
 										maxlength="@load(vm.getSurnameMaxlength())"
+										placeholder="*"
+										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 										tabindex="7"
 										hflex="3" />
 									<vbox hflex="2" style="margin-left: 10px;">
@@ -185,12 +212,14 @@
 							</cell>
 						</row>
 						<row style="padding: 10px; border: none;">
-							<label value="${c:l('txt.ui.common.phone')} 1:"/>
+							<label value="${c:l('txt.ui.common.phone')} 1"/>
 							<cell>
 								<hbox hflex="1">
 									<textbox id="representativePhone1"
 										value="@bind(fx.courseParticRepresentative.contact.phone1) @validator(vm.notNullValidator)"
 										maxlength="@load(vm.getPhoneMaxlength())"
+										placeholder="*"
+										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 										tabindex="8"
 										hflex="3" />
 									<vbox hflex="2" style="margin-left: 10px;">
@@ -213,12 +242,14 @@
 							</cell>
 						</row>
 						<row style="padding: 10px; border: none;">
-							<label value="${c:l('txt.ui.common.email')} 1:"/>
+							<label value="${c:l('txt.ui.common.email')} 1"/>
 							<cell>
 								<hbox hflex="1">
 									<textbox id="representativeEmail1"
 										value="@bind(fx.courseParticRepresentative.contact.email1) @validator(vm.emailValidator, notNull=true)"
 										maxlength="@load(vm.getEmailMaxlength())"
+										placeholder="*"
+										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 										tabindex="10"
 										hflex="3" />
 									<vbox hflex="2" style="margin-left: 10px;">
@@ -230,7 +261,7 @@
 							</cell>
 						</row>
 						<row style="padding: 10px; border: none;">
-							<label value="${c:l('txt.ui.common.email')} 2:"/>
+							<label value="${c:l('txt.ui.common.email')} 2"/>
 							<cell>
 								<hbox hflex="1">
 									<textbox id="representativeEmail2" 
@@ -260,7 +291,9 @@
 						<label value="${c:l('txt.ui.application.healthInfo')}" />
 					</vbox>
 					<vbox hflex="3">
-						<textbox rows="3" hflex="1" />
+						<textbox rows="3" hflex="1" multiline="true"
+							value="@bind(fx.courseParticipant.healthInfo)"
+							maxlength="@load(vm.getHealthInfoMaxlength())" />
 					</vbox>
 					<vbox hflex="2">
 					</vbox>
@@ -269,8 +302,10 @@
 				<hbox>
 					<checkbox checked="@bind(vm.personalInfoProcessAgreement)" />
 					<hbox>
-						<label value="${c:l('txt.ui.application.personaldataProcessAgreement')}" />
-						<a href="${c:l('txt.ui.url.aquacentrumbohumin')}">${c:l('txt.ui.aquacentrumbohumin')}</a>.
+						<span>
+							<label value="${c:l('txt.ui.application.personaldataProcessAgreement')}" />
+							<a href="${c:l('txt.ui.url.aquacentrumbohumin')}">${c:l('txt.ui.aquacentrumbohumin')}</a>.
+						</span>
 					</hbox>
 				</hbox>
 				
@@ -287,12 +322,16 @@
 						<button label="Odeslat" onClick="@command('submit')" iconSclass="z-icon-check" />
 					</vbox>
 				</hbox>
-				
 			</vbox>
 			
+			<script type="text/javascript">
+		        zk.afterMount(function() {
+		            jq("$particBirthNumber").mask("999999/9999");
+		        });
+		    </script>
+    
 			<vbox hflex="1" />
 		</hlayout>
-		
 	</div>
 </zk>
 
