--- a/scb-ui-zk/src/main/webapp/pages/common/template/menu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/menu.zul
@@ -32,8 +32,9 @@
 		
 		<menubar hflex="20" sclass="main-menu-bar" autodrop="true" apply="com.jzaoralek.scb.ui.common.template.MenuComposer" id="menubar">
 			
-			<!-- Prihlaska -->
-			<menuitem vflex="1" label="Home"
+			<!-- Dashboard -->
+			<menuitem 
+				label="Home"
 				id="menu_dashboard"
 				iconSclass="z-icon-home" 
 				onClick="@command('hrefCmd', href='/')" >
@@ -46,6 +47,15 @@
 				iconSclass="z-icon-file-text" 
 				onClick="@command('hrefCmd', href='/pages/public/prihlaska-do-klubu.zul')" >
 			</menuitem>
+			
+			<!-- Seznam prihlasek -->
+			<menuitem 
+				label="${c:l('txt.ui.menu.applicationList')}" 
+				id="menu_applicationToClubList"
+				iconSclass="z-icon-list-alt" 
+				onClick="@command('hrefCmd', href='/pages/secured/seznam-prihlasek.zul')" >
+			</menuitem>
+			
 		</menubar>
 		
 		<menubar hflex="1" sclass="main-menu-bar" />
