--- a/scb-ui-zk/src/main/webapp/pages/public/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/prihlaska-do-klubu.zul
@@ -20,8 +20,7 @@
 			<vbox hflex="1" />
 			
 			<vbox hflex="20" pack="center">
-				<headline label="${c:l('txt.ui.menu.application')}"
-					menuSelected="menu_applicationToClub" />
+				<headline label="${c:l('txt.ui.menu.application')}" menuSelected="menu_applicationToClub" />
 			</vbox>
 			
 			<vbox hflex="1" />
@@ -51,11 +50,16 @@
 				</vbox>
 				
 				<!-- Ucastnik -->
-				<grid hflex="1">
+				<grid hflex="1"  >
 		            <auxhead>
-		            	<auxheader colspan="2">
-		            		<label value="${c:l('txt.ui.common.participant')}"/>
-		            		(<label value="${c:l('txt.ui.common.child')}"/>)
+		            	<auxheader colspan="2" style="background: #428CCD;">
+		            		<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+		            			<hbox>
+			            			<vbox>
+			            				<label value="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" />
+									</vbox>
+		            			</hbox>
+		            		</vbox>
 		            	</auxheader>
 		            </auxhead>
 					<columns>
@@ -164,8 +168,14 @@
 				<!-- Zakonny zastupce -->
 				<grid hflex="1" style="margin-top: 20px;margin-bottom: 20px;" >
 		            <auxhead>
-		            	<auxheader colspan="2">
-		            		<label value="${c:l('txt.ui.common.representative')}"/>
+		            	<auxheader colspan="2" style="background: #428CCD;">
+		            		<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+		            			<hbox>
+			            			<vbox>
+			            				<label value="${c:l('txt.ui.common.representative')}"/>
+									</vbox>
+		            			</hbox>
+		            		</vbox>
 		            	</auxheader>
 		            </auxhead>
 					<columns>
