--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-prihlasek.zul
@@ -28,23 +28,28 @@
 			<vbox hflex="20" pack="center" apply="org.zkoss.bind.BindComposer" 
 			 	viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationListVM')">
 				
-				<listbox model="@load(vm.courseApplicationList)" 
-					vflex="1" 
+				<listbox model="@load(vm.courseApplicationList)"  
 					hflex="1"
 					style="margin-top: 20px;"
 					mold="paging"
 					pageSize="20"
 					class="listbox" >
 			        <auxhead>
-			            <auxheader class="header" colspan="7" >
-			            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-		            			<hbox>
-			            			<vbox>
-			            				<label value="${c:l('txt.ui.menu.applicationList')}" />
-									</vbox>
-		            			</hbox>
-		            		</vbox>
-			            
+			            <auxheader class="header" colspan="8" >
+			            	<hbox hflex="1" height="42px" align="center" >
+				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+			            			<hbox>
+				            			<vbox>
+				            				<label value="${c:l('txt.ui.menu.applicationList')}" />
+										</vbox>
+			            			</hbox>
+			            		</vbox>
+			            		<vbox hflex="1" vflex="1" align="end" pack="center" >
+			            			<hbox>
+		            					<button iconSclass="z-icon-download" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
+									</hbox>
+								</vbox>
+							</hbox>
 			            </auxheader>
 			        </auxhead>
 			        
@@ -85,30 +90,42 @@
 								instant="true"
 								onChange="@command('filterDomCmd')" />
 						</auxheader>
+						<auxheader class="filter">
+						</auxheader>
 					</auxhead>
 					
 			        <listhead>
-			            <listheader label="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" align="left" />
-			            <listheader label="${c:l('txt.ui.common.birthDate')}" align="left" />
-			            <listheader label="${c:l('txt.ui.common.birthNumber')}" align="left" />
-			            <listheader label="${c:l('txt.ui.common.representative')}" align="left" />
-			            <listheader label="${c:l('txt.ui.common.phone')}" align="left" />
-			            <listheader label="${c:l('txt.ui.common.email')}" align="left" />
-			            <listheader label="${c:l('txt.ui.common.createdAt')}" align="left" />
+			            <listheader label="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" sort="auto(courseParticipant.contact.surname)" align="left" />
+			            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(courseParticipant.birthdate)" align="left" />
+			            <listheader label="${c:l('txt.ui.common.birthNumber')}" align="left" sort="auto(courseParticipant.personalNo)" />
+			            <listheader label="${c:l('txt.ui.common.representative')}" sort="auto(courseParticRepresentative.contact.surname)"  align="left" />
+			            <listheader label="${c:l('txt.ui.common.phone')}" sort="auto(courseParticRepresentative.contact.phone1)" align="left" />
+			            <listheader label="${c:l('txt.ui.common.email')}" sort="auto(courseParticRepresentative.contact.email1)" align="left" />
+			            <listheader label="${c:l('txt.ui.common.createdAt')}" sort="auto(modifAt)" align="left" />
+			            <listheader width="50px" align="center" />
 			        </listhead>
 			         
 			        <template name="model">
 			            <listitem>
 			                <listcell label="${each.courseParticipant.contact.surname} ${each.courseParticipant.contact.firstname} " />
-			                <listcell label="${each.courseParticipant.birthdate}" />
+			                <listcell label="@load(each.courseParticipant.birthdate) @converter(vm.dateConverter)" />
 			                <listcell label="${each.courseParticipant.personalNo}" />
 			                <listcell label="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" />
 			                <listcell label="${each.courseParticRepresentative.contact.phone1}" />
 			                <listcell label="${each.courseParticRepresentative.contact.email1}" />
-			                <listcell label="${each.modifAt}" />
+			                <listcell label="${each.modifAt}" />			                	
+			                <listcell>
+			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="itemMenuPopup" />
+			                </listcell>
 			            </listitem>
 			        </template>
 			    </listbox>
+			    
+			    <menupopup id="itemMenuPopup" >
+					<menuitem label="Detail" />
+					<menuitem label="Odstranit" />
+		       	</menupopup>
+				
 			</vbox>
 			
 			<vbox hflex="1" />
