--- a/scb-ui-zk/src/main/webapp/pages/common/login.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/login.zul
@@ -1,60 +1,111 @@
-<?component name="headline" macroURI="/pages/template/components/page-headline.zul" inline="true"?>
+<?component name="headline" macroURI="/pages/common/template/page-headline.zul" inline="true"?>
 <?page title="${c:l('txt.Login')}"?>
-<?init class="org.zkoss.zk.ui.util.Composition" arg0="/pages/template2/template.zul"?>
+<?init class="org.zkoss.zk.ui.util.Composition" arg0="/pages/common/template/template.zul"?>
 <?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c" ?>
 
 <zk>
 	<div self="@{define(mainContent)}" 
-			apply="org.zkoss.bind.BindComposer"
-			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.common.demo.security.view.SecurityVM')"
-			form="@id('fx') @load(vm) @save(vm, before={'loginCmd'})">
+		apply="org.zkoss.bind.BindComposer"
+		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.common.security.SecurityVM')"
+		form="@id('fx') @load(vm) @save(vm, before={'loginCmd'})">
+	
 		
-			<headline label="${c:l('txt.Login')}" />
 		
-			<window closable="true" border="normal" sclass="alert alert-danger"
-				visible="@load(vm.loginFailure)">
-				<caption iconSclass="z-icon-times">
-					<label value="${c:l('msg.warn.BadCredentials')}" />
-				</caption>
-			</window>
-		
-			<vbox hflex="min" align="center" xmlns:h="xhtml">
-		
-				<grid hflex="min">
-					<columns>
-						<column hflex="min" align="right" />
-						<column hflex="min" />
-					</columns>
-					<rows>
-						<row>
-							<cell colspan="2">
-								<label
-									value="Přihlašovací údaje: sdat/password" />
-							</cell>
-						</row>
-						<row>
-							<label value="${c:l('txt.Username')}" />
-							<cell>
-								<hlayout>
-									<textbox id="txtUsername" name="username" value="@bind(fx.username)" constraint="no empty" />
-								</hlayout>
-							</cell>
-						</row>
-						<row>
-							<label value="${c:l('txt.Password')}" />
-							<cell>
-								<hlayout>
-									<textbox id="txtPassword" type="password" name="password" value="@bind(fx.password)" constraint="no empty"/>
-								</hlayout>
-							</cell>
-						</row>
-						<row>
-							<cell colspan="2">
-								<button label="${c:l('txt.Login')}" onClick="@command('loginCmd')" />
-							</cell>
-						</row>
-					</rows>
-				</grid>
+		<hlayout spacing="0">
+			<vbox hflex="1" />
+			
+			<vbox hflex="20" pack="center" >
+				<hbox hflex="1" >
+					<vbox >
+						<headline label="${c:l('txt.ui.common.Login')}" />
+					</vbox>
+				</hbox>
 			</vbox>
+			
+			<vbox hflex="1" />
+		</hlayout>
+		
+	
+		<hlayout xmlns:h="xhtml">
+			<vbox hflex="1" />
+			
+			<vbox hflex="20" pack="center" >
+				<window closable="true" border="normal" sclass="alert alert-danger"
+					visible="@load(vm.loginFailure)">
+					<caption iconSclass="z-icon-times">
+						<label value="${c:l('msg.ui.warn.BadCredentials')}" />
+					</caption> 
+				</window>
+					
+				<html>
+					<![CDATA[
+					<form id="loginForm" action="/scb-ui-zk/login" onsubmit="return validateForm()" method="post" >
+						<table>
+							<tr>
+								<td style="padding: 10px;" >
+									${c:l('txt.ui.common.Username')}
+								</td>
+								<td style="padding: 10px;">
+									<input type="text" id="username" name="username" class="z-textbox" />
+								</td>
+								<td>
+									<span id="usernameRequiredSpan" class="alert alert-danger" style="visibility: hidden" >
+										${c:l('msg.ui.validation.err.valueRequired')}
+									</span>
+								</td>
+							</tr>
+							<tr>
+								<td style="padding: 10px;">
+									${c:l('txt.ui.common.password')}
+								</td>
+								<td style="padding: 10px;">
+									<input type="password" id="password" name="password" class="z-textbox" />
+								</td>
+								<td>
+									<span id="passwordRequiredSpan" class="alert alert-danger" style="visibility: hidden" >
+										${c:l('msg.ui.validation.err.valueRequired')}
+									</span>
+								</td>
+							</tr>
+							<tr>
+								<td colspan="2" align="right" style="padding: 10px;">
+									<input id="btnSubmit" type="submit" class="z-button" value="${c:l('txt.ui.common.ToLogin')}" style="margin-right: 5px;" />
+								</td>
+								<td>
+								</td>
+							</tr>
+						</table>
+					</form>
+					
+					<script>
+						function validateForm() {
+						    var username = document.forms["loginForm"]["username"].value;
+						    var password = document.forms["loginForm"]["password"].value;
+						    
+						    var usernameRequiredSpan = document.getElementById('usernameRequiredSpan');
+						    var passwordRequiredSpan = document.getElementById('passwordRequiredSpan');
+						    
+						    usernameRequiredSpan.style = "visibility: hidden";
+						    passwordRequiredSpan.style = "visibility: hidden";
+						    
+						    var valid = true;
+						    if (username == null || username == "") {
+						    	usernameRequiredSpan.style = "visibility: visible";
+						        valid = false;
+						    }
+						    if (password == null || password == "") {
+						    	passwordRequiredSpan.style = "visibility: visible";
+						        valid = false;
+						    }
+						    return valid;
+						}
+					</script>
+					]]>
+				</html>
+			</vbox>
+			
+			<vbox hflex="1" />
+			
+		</hlayout>
 	</div>
 </zk>
