--- a/scb-ui-zk/src/main/webapp/pages/common/template/menuMobile.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/menuMobile.zul
@@ -1,10 +1,15 @@
 <zk>
 
 	<menubar id="menubar" orient="vertical" autodrop="true" apply="org.zkoss.bind.BindComposer"
-	viewModel="@id('vm') @init('com.jzaoralek.scb.ui.common.template.MenuVM')">
-		<menuitem label="Home" onClick="@command('hrefCmd', href='/')" />
-		<menuitem label="${c:l('txt.ui.menu.application')}" onClick="@command('hrefCmd', href='/pages/public/prihlaska-do-klubu.zul')" />
-		<menuitem label="${c:l('txt.ui.menu.applicationList')}" onClick="@command('hrefCmd', href='/pages/secured/seznam-prihlasek.zul')" />
+	viewModel="@id('vm') @init('com.jzaoralek.scb.ui.common.security.SecurityVM')">
+		<menuitem label="Home" 
+			href="/" visible="@load(!vm.isUserLogged())" />
+		<menuitem label="${c:l('txt.ui.menu.application')}" 
+			href="/pages/public/prihlaska-do-klubu.zul" 
+			visible="@load(!vm.isUserLogged())" />
+		<menuitem label="${c:l('txt.ui.menu.applicationList')}" 
+			href="/pages/secured/seznam-prihlasek.zul" 
+			visible="@load(vm.isUserLogged() and vm.isLoggedUserInRole('ADMIN'))" />
 		<menu label="Hardware" visible="false">
 			<menupopup>
 				<menu label="Mainboard">
