scb-ui-zk module #2, add captcha to course application page

--- a/scb-ui-zk/src/main/webapp/pages/common/login.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/login.zul
@@ -40,7 +40,7 @@
 				<html>
 					<!-- scb-ui-zk-1.0-SNAPSHOT -->
 					<![CDATA[
-					<form id="loginForm" action="/scb-ui-zk/login" onsubmit="return validateForm()" method="post" >
+					<form id="loginForm" action="/scb-ui-zk-1.0-SNAPSHOT/login" onsubmit="return validateForm()" method="post" >
 						<table>
 							<tr>
 								<td style="padding: 10px;" >
